LIMO-92 - MatchListing divider league icons alignement fix

--- a/src/components/livescore/ls-divider/_ls-divider.scss
+++ b/src/components/livescore/ls-divider/_ls-divider.scss
@@ -61,6 +61,7 @@
 	color: $ls-divider-icon-color;
 	font-size: $ls-divider-icon-size;
 	vertical-align: middle;
+  	display: block;
 
 	.ls-divider__title & {
 		margin-right: 9px;
